add ssm framework